<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".veterinarios.views.VeterinarioActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/nombre_veterinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Felip"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/especializacion"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/nombre_veterinario"
        app:layout_constraintTop_toBottomOf="@+id/nombre_veterinario" />

    <TextView
        android:id="@+id/especializacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Dermatólogo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/centro_veterinario"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/especializacion"
        app:layout_constraintTop_toBottomOf="@+id/especializacion" />


    <TextView
        android:id="@+id/nombre_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="GosGat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/direccion_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Calle del Centro 10"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nombre_centro"
        app:layout_constraintTop_toBottomOf="@+id/nombre_centro" />


    <TextView
        android:id="@+id/dias_trabajo_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/direccion_centro"
        app:layout_constraintTop_toBottomOf="@+id/direccion_centro"
        tools:text="Lunes a Viernes" />

    <TextView
        android:id="@+id/horario_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="9:00 - 14:00"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/dias_trabajo_centro"
        app:layout_constraintTop_toTopOf="@+id/dias_trabajo_centro" />

    <TextView
        android:id="@+id/telefono_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/dias_trabajo_centro"
        app:layout_constraintTop_toBottomOf="@+id/dias_trabajo_centro"
        tools:text="956 689 562" />

    <TextView
        android:id="@+id/pagina_web_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/telefono_centro"
        app:layout_constraintTop_toBottomOf="@+id/telefono_centro"
        tools:text="www.centro.com" />

</androidx.constraintlayout.widget.ConstraintLayout>